# iaEditais-demo

./: .env  .env.exemple  Dockerfile  compose.yaml  pyproject.toml
iaEditais/: config.py  streamlit.py
iaEditais/hooks/: publication.py  source.py  taxonomy.py
iaEditais/methodology/: branch.py  taxonomy.py  typification.py
iaEditais/publication/: analysis.py  publication.py
iaEditais/source/: source.py
