[project]
name = "iaeditais-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "gmcosta",email = "geu_costa@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "iaeditais_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
