[project]
name = "iaeditais-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "gmcosta",email = "geu_costa@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.11.3,<0.12.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "streamlit-pdf-viewer (>=0.0.22,<0.0.23)"
]

[tool.poetry]
packages = [{include = "iaEditais"}]



[tool.poetry.group.taskipy.dependencies]
ruff = "^0.11.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'streamlit run iaEditais/streamlit.py'
